<resources>
    <string name="app_name">Assignment 2</string>
    <string name="title_activity_alarm_notifier">Alarm Notification</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_alarm_receiver">Alarm Receiver</string>
    <string name="title_activity_alarm_clock">Alarm Clock</string>
    <string name="title_activity_alarm_maker">New Alarm</string>
    <string name="title_activity_alarm_maker_update">Update Alarm</string>
    <string name="title_activity_country_maker">Add Country</string>
    <string name="title_activity_country_maker_update">Update Country</string>
    <string name="title_activity_country_preference">Country Preference</string>
    <string name="title_activity_master_menu">MasterMenu</string>
    <string name="title_activity_my_countries">My Countries</string>
    <string name="title_update">Update</string>
    <string name="title_delete">Delete</string>
    <string name="title_alarm_context">Alarm selections</string>
    <string name="title_music_notify_title">Playing</string>
    <string name="title_music_notify_info">Playing</string>
    <string name="action_add_country">Add Country</string>
    <string name="action_add_alarm">Add Alarm</string>
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="action_sort">Sort</string>
    <string name="action_sort_by_country">By Country</string>
    <string name="action_sort_by_year">By Year</string>
    <string name="action_sort_ASC">Ascending</string>
    <string name="action_sort_DESC">Descending</string>
    <string name="label_add_country">Select the country and the year you were there.</string>
    <string name="label_add_alarm">Alarm setup</string>
    <string name="button_add_country">Add country</string>
    <string name="button_alarm_snooze">Snooze!</string>
    <string name="button_alarm_dismiss">Dismiss</string>
    <string name="button_add_alarm">Add alarm</string>
    <string name="button_update_country">Update country</string>
    <string name="button_update_alarm">Update alarm</string>
    <string name="empty_list">No countries have been added!</string>
    <string name="alarm_empty_list">No alarms have been added!</string>
    <string name="prompt_country">Choose a country</string>
    <string name="prompt_alarm_types">Choose a reminder</string>
    <string name="prompt_year">When did you visit the country?</string>
    <string name="country_prefs_title">Preferences</string>
    <string name="country_prefs_summary">Preferences for the application My Countries.</string>
    <string name="pref_country_background_title">Background color</string>
    <string name="pref_country_fontsize_title">Fontsize</string>
    <string name="pref_country_fontcolor_title">Fontcolor</string>
    <string name="pref_country_background_summary">Change the background.</string>
    <string name="pref_country_fontsize_summary">Change the fontsize.</string>
    <string name="pref_country_fontcolor_summary">Change the fontcolor.</string>
    <string name="pref_country_background_key">backgroundKey</string>
    <string name="pref_country_fontsize_key">fontsizeKey</string>
    <string name="pref_country_fontcolor_key">fontcolorKey</string>
    <string name="pref_country_background_dValue">#6897BB</string>
    <string name="pref_country_fontsize_dValue">16</string>
    <string name="pref_country_fontcolor_dValue">#FFFFFF</string>
    <string name="play_button_desc">Play</string>
    <string name="previous_button_desc">Back</string>
    <string name="next_button_desc">Next</string>
    <string-array name="alarm_types_array">
        <item>Alarm</item>
        <item>Notification</item>
        <item>School</item>
        <item>Training</item>
        <item>Wake up</item>
        <item>Work</item>
    </string-array>
    <string-array name="country_background_colors_array">
        <item>Blue</item>
        <item>Green</item>
        <item>Grey</item>
        <item>Yellow</item>
        <item>White</item>
    </string-array>
    <string-array name="country_background_colors_array_values">
        <item>#6897BB</item>
        <item>#83b51e</item>
        <item>#4a525a</item>
        <item>#FFDB00</item>
        <item>#FFFFFF</item>
    </string-array>
    <string-array name="country_fontsize_array">
        <item>Small</item>
        <item>Normal</item>
        <item>Big</item>
    </string-array>
    <string-array name="country_fontsize_array_values">
        <item>12</item>
        <item>16</item>
        <item>20</item>
    </string-array>
    <string-array name="country_fontcolor_array">
        <item>White</item>
        <item>Red</item>
        <item>Black</item>
    </string-array>
    <string-array name="country_fontcolor_array_values">
        <item>#FFFFFF</item>
        <item>#FF7373</item>
        <item>#0a0a0a</item>
    </string-array>
</resources>