<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/add_country"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_add_country"
        android:showAsAction="ifRoom"
    />
    <item
        android:id="@+id/country_preferences"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings"
        android:showAsAction="ifRoom"
    />
    <item 
        android:icon="@drawable/ic_action_sort_by_size"
        android:title="@string/action_sort" 
        android:showAsAction="ifRoom">
        <menu>
	        <group>
			    <item 
			        android:title="@string/action_sort_by_country">
	               <menu>
				        <group>
						    <item 
						        android:id="@+id/sort_country_A" 
						        android:title="@string/action_sort_ASC"
						    />
						    <item 
						        android:id="@+id/sort_country_D" 
						        android:title="@string/action_sort_DESC"
						    />
				        </group> 
			        </menu>
		        </item>
			    <item 
			        android:title="@string/action_sort_by_year">
   	               <menu>
				        <group>
						    <item 
						        android:id="@+id/sort_year_A" 
						        android:title="@string/action_sort_ASC"
						    />
						    <item 
						        android:id="@+id/sort_year_D" 
						        android:title="@string/action_sort_DESC"
						    />
				        </group> 
			        </menu>
	        	</item>
	        </group> 
        </menu>
    </item>
</menu>