<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="match_parent"
	android:layout_height="match_parent">
				
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:padding="10sp"
	        android:text="@string/label_add_country" />
	
		<Spinner
		    android:id="@+id/spinnerCountries"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
	        android:entries="@array/country_arrays"
		    android:background="@android:drawable/btn_dropdown"
		    android:prompt="@string/prompt_country"
    		android:spinnerMode="dialog"
		/>
		
		<Spinner
		    android:id="@+id/spinnerYears"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
	        android:entries="@array/year_arrays"
		    android:background="@android:drawable/btn_dropdown"
		    android:prompt="@string/prompt_year"
    		android:spinnerMode="dialog"
		/>
</LinearLayout>